<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/second_margin"
    android:layout_marginEnd="@dimen/main_margin"
    android:layout_marginStart="@dimen/main_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erase"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/main_margin"
        app:layout_constraintBottom_toTopOf="@id/definition_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/class_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_dictionary"
        android:layout_marginStart="@dimen/main_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/title_tv"
        app:layout_constraintStart_toEndOf="@id/title_tv"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/definition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_example_sentence"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintBottom_toTopOf="@id/divider"
        android:layout_marginBottom="@dimen/second_margin"/>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/second_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>