<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_secondaryContainer"
    tools:context=".ui.home.word.WordFragment">

    <!-- word title   -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/title_contents_card_view"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_margin"
        app:cardBackgroundColor="@color/md_theme_onPrimary"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/example_sentence_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/main_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bookmark_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/main_margin"
                app:icon="@drawable/star_icon"
                app:iconSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_word_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="32dp"
                android:text="@string/mock_main_word"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/word_pronounce_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word_pronounce_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/second_margin"
                android:text="@string/mock_word_pronounce"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_word_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word_meaning_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:paddingBottom="16dp"
                android:text="@string/mock_word_meaning"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/word_pronounce_tv" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/learn_contents_divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                app:dividerColor="@color/md_theme_secondaryContainer"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/word_meaning_tv" />


            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/text_flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                app:constraint_referenced_ids="listen_word_tv, dictionary_tv, write_tv, speak_tv"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/learn_contents_divider" />

            <TextView
                android:id="@+id/listen_word_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listen_btn" />

            <TextView
                android:id="@+id/dictionary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dictionary_btn"
                app:layout_constraintStart_toStartOf="@id/listen_word_tv"
                app:layout_constraintTop_toBottomOf="@id/word_meaning_tv" />

            <TextView
                android:id="@+id/write_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_btn"
                app:layout_constraintStart_toStartOf="@id/listen_word_tv"
                app:layout_constraintTop_toBottomOf="@id/word_meaning_tv" />

            <TextView
                android:id="@+id/speak_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speak_btn"
                app:layout_constraintStart_toStartOf="@id/listen_word_tv"
                app:layout_constraintTop_toBottomOf="@id/word_meaning_tv" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:constraint_referenced_ids="listen_btn, dictionary_btn, write_btn, record_btn"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listen_word_tv" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/listen_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/listen" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/dictionary_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dictionary"
                app:layout_constraintStart_toEndOf="@id/listen_btn"
                app:layout_constraintTop_toBottomOf="@id/listen_word_tv" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/write_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/write"
                app:layout_constraintStart_toEndOf="@id/listen_btn"
                app:layout_constraintTop_toBottomOf="@id/text_flow" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/record_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/speak"
                app:layout_constraintStart_toEndOf="@id/listen_btn"
                app:layout_constraintTop_toBottomOf="@id/text_flow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- example_sentence   -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/example_sentence_card_view"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        app:cardBackgroundColor="@color/md_theme_onPrimary"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_contents_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/main_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/example_sentence_korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/mock_example_sentence"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/example_sentence_english"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/example_sentence_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/mock_example_sentence"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/example_sentence_korean" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.023255814" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="46dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="49dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
