<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.word.DictionaryFragment"
    android:layout_margin="@dimen/main_margin">

<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="24dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30dp"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/mock_main_word"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/big_margin_top"
            app:layout_constraintTop_toBottomOf="@id/main_title_tv"
            app:dividerInsetStart="@dimen/main_margin"
            app:dividerInsetEnd="@dimen/main_margin"/>

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/meaning_title_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/meaning"
       android:layout_margin="@dimen/main_margin"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/divider_1"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/big_margin_top"
            app:layout_constraintTop_toBottomOf="@id/meaning_title_tv"
            app:dividerInsetStart="@dimen/main_margin"
            app:dividerInsetEnd="@dimen/main_margin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sentence_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentence"
            android:layout_margin="@dimen/main_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_2"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/big_margin_top"
            app:layout_constraintTop_toBottomOf="@id/sentence_title_tv"
            app:dividerInsetStart="@dimen/main_margin"
            app:dividerInsetEnd="@dimen/main_margin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sentence_title_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentence"
            android:layout_margin="@dimen/main_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_3"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/big_margin_top"
            app:layout_constraintTop_toBottomOf="@id/sentence_title_tv_2"
            app:dividerInsetStart="@dimen/main_margin"
            app:dividerInsetEnd="@dimen/main_margin"/>





    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>