<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_50"
    tools:context=".ui.game.TTSFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/record_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:text="@string/tts_message"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:endIconCheckable="false"
        app:endIconDrawable="@drawable/search_icon"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/switchMode"
        app:layout_constraintTop_toBottomOf="@id/record_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchMode"
        app:layout_constraintTop_toBottomOf="@id/inputTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/main_margin"
        app:layout_constraintBottom_toTopOf="@id/drawing_cardView"
        android:checked="false"
        app:thumbIconTint= "@color/blue_100"
        android:text="@string/switch_message"/>
    <!-- write down space   -->
    <com.google.android.material.card.MaterialCardView
        android:visibility="invisible"
        android:id="@+id/drawing_cardView"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        app:cardCornerRadius="24dp"
        android:backgroundTint="@color/point_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchMode">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.hye.sesac.klangpj.ui.game.DrawingCustomView
                android:id="@+id/custom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speech_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_margin"
                android:text="@string/input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>